js/src/tests/test262/built-ins/Error/error-message-tostring-symbol.js



















assert.throws(TypeError, function () {
    Error(Symbol())
}, "If _message_ is a Symbol, Error must throw TypeError");

reportCompare(0, 0);
